--- a/templates/base.html
+++ b/templates/base.html
@@ -11,10 +11,118 @@
             {{ bootstrap.load_css() }}
         {% endblock %}
 
-        <title>{% block title %}Next Muby{% endblock %}</title>
+        <title>{% block title %}PeliQuest (BETA){% endblock %}</title>
         {% endblock %}
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Port+Lligat+Slab&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
+        <style>
+            /* Animación flotante */
+            @keyframes float {
+                0% {
+                    transform: translateY(0px);
+                }
+                50% {
+                    transform: translateY(-14px);
+                }
+                100% {
+                    transform: translateY(0px);
+                }
+            }
+            
+            /* Estilo global para el fondo */
+            body {
+                background-color: #b59a7d;
+                margin: 0;
+                height: 100vh; /* Hace que el body ocupe toda la altura de la pantalla */
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column; /* Para organizar los elementos verticalmente */
+                height: auto;
+            }
+            
+            /* Estilo del título */
+            .title {
+                font-family: 'Port Lligat Slab', sans-serif;
+                font-size: 48px;
+                font-weight: bold;
+                color: #1d242e;
+                margin-top: 5px;
+                text-align: center;
+                position: fixed;
+                top: 10px;
+            }
+            /* Estilo link edicion usuario */
+            .user-edit-link {
+                display: block;
+                float: right;
+                position: fixed;
+                top: 10px;
+                right: 50px;
+                font-family: 'Port Lligat Slab', sans-serif;
+                font-size: 20px;
+                font-weight: bold;
+                color: #1d242e;
+            }
+
+            /* Estilo de la imagen con animación */
+            .logo img {
+                animation: float 2s ease-in-out infinite;
+                width: 200px;
+                height: auto;
+            }
+            /* Estilo de los mensajes */
+            .message-assistant {
+                background-color: #1d242e;
+                border-radius: 15px;
+                padding: 10px;
+                margin-bottom: 20px;
+            }
+
+            .message-user {
+                background-color: #fef9e3; /* Fondo para los mensajes del usuario */
+                color: #1d242e; /* Texto oscuro para los mensajes del usuario */
+                border-radius: 15px;
+                padding: 10px;
+                margin-bottom: 20px;
+            }
+            /* Centrado del contenido */
+            .container {
+                text-align: center;
+                margin-top: 60px;
+            }
+            /* Estilo del formulario de mensaje */
+            .input-group {
+                width: 100%;
+                max-width: 2000px; /* Controla el ancho del input y el botón */
+            }
+
+            /* Estilo de los botones */
+            .btn-primary {
+                background-color: #1d242e; /* Color de fondo para el botón */
+                color: #fef9e3;
+                border-radius: 25px;
+                padding: 12px 24px;
+            }
+            .card{
+                margin-top: 50px;
+            }
+            .card-header{
+                font-size: 22px;
+            }
+        </style>
+
     </head>
     <body>
+        {% block body_title %}
+            <div class="title">
+                PeliQuest (BETA)
+            </div>
+        {% endblock %}
         <!-- Your page content -->
         {% block content %}{% endblock %}
 
