--- a/templates/landing.html
+++ b/templates/landing.html
@@ -3,24 +3,23 @@
 {% block title %}Próximamente: Next Muby{% endblock %}
 
 {% block content %}
-<div class="container col-xxl-8 px-4 py-5">
-    <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-      <div class="col-10 col-sm-8 col-lg-6">
-        <img src="{{ url_for('static', filename='preview.png') }}" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
-      </div>
-      <div class="col-lg-6">
-        <h1 class="display-5 fw-bold lh-1 mb-3">Next Muby</h1>
-        <p class="lead fw-bold">Deja de buscar, empieza a disfrutar.</p>
-        <p class="lead">
-            Encuentra tu próxima película o serie en segundos, sin perder horas
-            eligiendo.
-        </p>
-        <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-          <a href="https://forms.gle/6Viq6LLRmiXtD1Cu6" class="btn btn-primary btn-lg px-4 me-md-2">
-            Inscríbete en la lista de espera
-          </a>
-        </div>
-      </div>
-    </div>
+
+<div class="container">
+  <!-- Imagen del logo con animación flotante -->
+  <div class="logo mb-4">
+      <img src="{{ url_for('static', filename='pixelart_logo.png') }}" alt="Logo PeliQuest" class="img-fluid">
   </div>
+
+  <!-- Slogan -->
+  <p class="slogan mt-4" style="font-size: 28px; color: #1d242e;">
+      <i>Tu aliado experto en encontrar películas.</i>
+  </p>
+
+  <!-- Botón -->
+  <div class="mt-3">
+      <a href="chat" class="btn btn-lg px-5" style="background-color: #1d242e; color: white; border-radius: 25px;">
+          ¡Empecemos!
+      </a>
+  </div>
+</div>
 {% endblock %}
