--- a/templates/base.html
+++ b/templates/base.html
@@ -114,6 +114,46 @@
             .card-header{
                 font-size: 22px;
             }
+            @keyframes ldio-rpinwye8j0b {
+              0% { transform: rotate(0deg) }
+              50% { transform: rotate(180deg) }
+              100% { transform: rotate(360deg) }
+            }
+            .ldio-rpinwye8j0b div {
+              position: absolute;
+              animation: ldio-rpinwye8j0b 1s linear infinite;
+              width: 160px;
+              height: 160px;
+              top: 20px;
+              left: 20px;
+              border-radius: 50%;
+              box-shadow: 0 4px 0 0 #e15b64;
+              transform-origin: 80px 82px;
+            }
+            .loadingio-eclipse {
+                width: 100%;
+                height: 100%;
+                display: none;
+                overflow: hidden;
+                position: fixed;
+                top: 0;
+                z-index: 3;
+                background: rgb(160 160 160 / 30%);
+            }
+            .ldio-rpinwye8j0b {
+                width: 200px;
+                height: 200px;
+                backface-visibility: hidden;
+                transform-origin: 0 0;
+                margin-right: auto !important;
+                margin-left: auto !important;
+                position: absolute;
+                left: 50%;
+                top: 90%;
+                -webkit-transform: translate(-50%, -50%);
+                transform: translate(-50%, -50%);
+            }
+            .ldio-rpinwye8j0b div { box-sizing: content-box; }
         </style>
 
     </head>
