--- a/templates/chat.html
+++ b/templates/chat.html
@@ -47,6 +47,11 @@
             </div>
         </form>
     </div>
+    <div class="loadingio-eclipse">
+        <div class="ldio-rpinwye8j0b">
+          <div></div>
+        </div>
+    </div>
     <script type="text/javascript">
         window.onload = function(e){ 
             const bottomElement = document.getElementById('message');
@@ -65,6 +70,10 @@
                     event.preventDefault();
                     document.getElementById("send-message").click();
                 }
+            });
+
+            document.forms[0].addEventListener("submit", function(){
+                document.getElementsByClassName("loadingio-eclipse")[0].style.display = "block";
             });
             
         }
